# esp32c6-zigbee-vital-gateway

./: .gitignore  CMakeLists.txt  README.md  compare.md  otaflash.md  partitions.csv  sdkconfig.defaults  splitgateway.md  splitgateway_en.md
host/: Dockerfile  database.md  docker-compose.yml  esp32gw.service  gateway_service.py  ha_pv_monthly.yaml  ha_pv_monthly_dashboard.yaml  install.sh  mosquitto.conf  requirements.txt  schema.sql
main/: CMakeLists.txt  ha_mqtt.c  ha_mqtt.h  idf_component.yml  main.c  mr60bha1.c  mr60bha1.h  mr60bha2.c  mr60bha2.h  web_server.c  web_server.h  web_ui.c  web_ui.h  zb_gateway.c  zb_gateway.h
matter/: CMakeLists.txt  README.md  matter.md  partitions.csv  sdkconfig.defaults  sdkconfig.old
matter/main/: CMakeLists.txt  idf_component.yml  main.c  matter_endpoint.c  matter_endpoint.cpp  matter_endpoint.h  mr60bha1.c  mr60bha1.h  mr60bha2.c  mr60bha2.h  vital_cluster.c  vital_cluster.cpp  vital_cluster.h
