idf_component_register(
    SRCS
        "main.c"
        "mr60bha2.c"
        "ha_mqtt.c"
        "zb_gateway.c"
        "web_ui.c"
    INCLUDE_DIRS "."
    REQUIRES
        nvs_flash
        esp_wifi
        esp_netif
        esp_event
        mqtt
        driver
        espressif__esp-zigbee-lib
        freertos
        log
        esp_http_server
        esp_timer
        app_update
)
